--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         gtag('config', 'G-L2E9WPSSN6');
         </script>
 
+
         <link rel="stylesheet" href="style.css">
  
         <title>Bootstrap Tutorial Sample Page</title>
@@ -39,10 +40,10 @@
         <div class="my-container">
 
             <div class="toplevel">
-                <div class="header">
-                    <div class="title">
-                        <div></div>
-                        <div class="title-holder">
+                <div class="header" id="header">
+                    <div></div>
+                    <div></div>
+                    <div class="title-holder">
                         <div class="title-banner">
                             <h1>
                                 <i class="fa-solid fa-user-doctor"></i>&nbsp;
@@ -57,7 +58,6 @@
                             <div>
                                 
                             </div>
-                        </div>
                         </div>
                     </div>
 
@@ -75,7 +75,6 @@
     
                     במסגרת העבודה בבית חולים ברזילי:
                     <ul>
-                        <li><div class="time">2009-2019</div> סגנית מנהל במחלקה נוירולוגית</li>
                         <li><div class="time">2009-2019</div> סגנית מנהל במחלקה נוירולוגית</li>
                         <li><div class="time">2013-2022</div> מנהלת שירות</li>
                         <li><div class="time">2019-2022</div> מנהלת יחידת שבץ</li>
@@ -102,6 +101,6 @@
                 </div>
             </div>
         </div>
-
+        <script src="gyro.js"></script>
     </body>
 </html>
